# tap-mssql

./: .gitignore  README.md  pyproject.toml
tap_mssql/: __init__.py  __main__.py  client.py  json.py  tap.py
tap_mssql/tests/: test_core.py
tests/: __init__.py  test_core.py
